--- a/socketioRoom/public/index.html
+++ b/socketioRoom/public/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
   <p>Welcome to the chat app</p>
+
+  <form id="message-form">
+    <input name="message" type="text" placeholder="Message" id="message-input"/>
+    <button type="submit">Send</button>
+  </form>
+  <ol id="lists"></ol>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="/js/index.js"></script>
 </body>
 </html>
