--- a/socketioRoom/public/index.html
+++ b/socketioRoom/public/index.html
@@ -14,7 +14,7 @@
     <button type="submit">Send</button>
   </form>
   <ol id="lists"></ol>
-
+  <button id="send-location">Send Loaction</button>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="/js/index.js"></script>
