--- a/socketioRoom/public/index.html
+++ b/socketioRoom/public/index.html
@@ -4,17 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/style/index.css">
   <title>Document</title>
 </head>
 <body>
-  <p>Welcome to the chat app</p>
 
-  <form id="message-form">
-    <input name="message" type="text" placeholder="Message" id="message-input"/>
-    <button type="submit">Send</button>
-  </form>
-  <ol id="lists"></ol>
-  <button id="send-location">Send Loaction</button>
+  <div class="container">
+    <div class="people">
+      <h1>People</h1>
+    </div>
+    <div class="form">
+      <ul id="lists"></ul>
+      <form id="message-form">
+        <input name="message" type="text" placeholder="Message" id="message-input"/>
+        <button type="submit" id="message-btn">Send</button>
+        <button id="send-location">Location</button>
+      </form>
+    </div>
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="/js/index.js"></script>
