--- a/socketioRoom/public/index.html
+++ b/socketioRoom/public/index.html
@@ -19,7 +19,7 @@
           </div>
           <div class="join-field">
             <label>Room name</label>
-            <input type="text" name="room" />
+            <input type="text" name="room">
           </div>
           <div class="join-field">
             <button class="join-btn">join</button>
@@ -30,6 +30,6 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="/js/index.js"></script>
+  <script src="/js/deparam.js"></script>
 </body>
 </html>
