--- a/socketioRoom/public/chat.html
+++ b/socketioRoom/public/chat.html
@@ -24,6 +24,7 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="/js/deparam.js"></script>
   <script src="/js/index.js"></script>
 </body>
 </html>
